# BitTorrent-Rust

./: Cargo.toml  LICENSE  README.md  flake.nix
brs/: Cargo.toml
brs/src/: error.rs  lib.rs  macros.rs
brs/src/torrent/: de.rs  display.rs  errors.rs  mod.rs
brs/src/torrent/v1/: display.rs  ext_parsing.rs  main.rs  mod.rs
brs/src/tracker/: mod.rs  tracker.rs
cli/: Cargo.toml  out
cli/src/: main.rs  torrent.rs  tracker.rs
gui/: Cargo.toml
lib/: Cargo.toml
lib/src/: extension_parsing.rs  lib.rs  macros.rs  peer.rs
lib/src/torrent/: errors.rs  mod.rs
lib/src/torrent/v1/: display.rs  main.rs  mod.rs  parsing_modules.rs  tcp.rs
lib/src/tracker/: announce.rs  errors.rs  mod.rs  parsing_modules.rs  tracker.rs
