[package]
name = "brs"
version = "0.1.0"
edition = "2021"
description = "BRS stands for \"BitTorrent Rust\". It a library for the BitTorrent protocol."
authors = [ "Antoine Langlois <dev@antoine-langlois.net>" ]

[dependencies]
bendy = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
human_bytes = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2"
serde_bytes = "0.11"
serde_json = "1.0"
thiserror = "1.0"
