[package]
name = "brs"
version = "0.1.0"
edition = "2021"
description = "BRS stands for \"BitTorrent Rust\". It's a library for the BitTorrent protocol."
authors = [ "Antoine Langlois <dev@antoine-langlois.net>" ]

[dependencies]
bendy = { version = "0.3", features = ["std", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
human_bytes = "0.4"
rand = "0.8"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_with = { version = "3.7", features = ["chrono"] }
sha1 = "0.10"
thiserror = "1.0"
