[package]
name = "brs-cli"
version = "0.1.0"
edition = "2021"
description = "BRS desktop GUI and WebUI"
authors = [ "Antoine Langlois <dev@antoine-langlois.net>" ]

[dependencies]
brs = { path = "../brs" }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
rand = "0.8"
bendy = { version = "0.3", features = ["std", "serde"] }
